kustomize/overlay/prod/iwiick-proj-1-prod-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iwiick-proj-1-prod
  labels:
    environmentId: env_8436aba8-7832-4346-86a8-95034b409364
    projectId: project_c0bc69cf-4b2e-4493-ab8e-970a6433cce0
    projectName: iwiick-proj-1
    environmentName: prod
    organizationId: org_6de1b366-9da6-4d55-b363-f5a2c4382016
