kustomize/overlay/prod/iwiick-proj-1-prod-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-and-limited-ingress
  namespace: iwiick-proj-1-prod
  labels:
    organizationId: org_5bdc6e05-06b5-4d67-91b9-f020de5fdd93
    projectId: project_82f4100c-84e8-48e5-ba8e-3d53f7e54908
    environmentId: env_607f8654-6cc4-4a41-91fa-821175241c28
spec:
  podSelector: {}
  egress:
    - {}
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              environmentId: env_607f8654-6cc4-4a41-91fa-821175241c28
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: skyu-system
    - from:
        - namespaceSelector:
            matchLabels:
              role: ingress
    - from:
        - namespaceSelector:
            matchLabels:
              role: observability
